# econ-pandas-api

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Economico/: Dockerfile  README.md
Economico/app/: bcb_client.py  config.py  main.py  transform.py
Economico/tests/: test_transform.py
app/: __init__.py  main.py  models.py  transform.py
